update swagger coments
